objects/efaxapp__Received_Fax__c.object
<CustomObject>
    <fields>
        <fullName>efaxapp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Received Faxes</relationshipLabel>
        <relationshipName>Received_Faxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>efaxapp__Caller_Id__c</fullName>
        <label>Caller Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Received Faxes</relationshipLabel>
        <relationshipName>Received_Faxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>efaxapp__Cost_Per_Page__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Per Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>efaxapp__Fax_Number__c</fullName>
        <label>Fax Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>efaxapp__Fax_URL__c</fullName>
        <label>Fax URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__MCFID__c</fullName>
        <externalId>true</externalId>
        <label>MCFID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Received Faxes</relationshipLabel>
        <relationshipName>Received_Faxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>efaxapp__Preview_Fax__c</fullName>
        <formula>IF(NOT(ISNULL(efaxapp__Preview_Image_URL__c)),HYPERLINK(IF(OR(ISPICKVAL($Profile.UserType,&quot;PowerCustomerSuccess&quot;),ISPICKVAL($Profile.UserType,&quot;CustomerSuccess&quot;)),&quot;/customer&quot;,&quot;&quot;)&amp; efaxapp__Fax_URL__c,IMAGE(IF(OR(ISPICKVAL($Profile.UserType,&quot;PowerCustomerSuccess&quot;),ISPICKVAL($Profile.UserType,&quot;CustomerSuccess&quot;)),&quot;/customer&quot;,&quot;&quot;)&amp;efaxapp__Preview_Image_URL__c,&quot;Received Fax&quot;,400,400),&quot;_self&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Preview_Image_URL__c</fullName>
        <label>Preview Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Preview_Image__c</fullName>
        <formula>IF(NOT(ISNULL(efaxapp__Preview_Image_URL__c)),IMAGE(efaxapp__Preview_Image_URL__c,&quot;Received Fax&quot;,400,400),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Received_Date__c</fullName>
        <label>Received Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>efaxapp__Sent_Fax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent Fax</label>
        <referenceTo>efaxapp__Sent_Fax__c</referenceTo>
        <relationshipLabel>Received Faxes</relationshipLabel>
        <relationshipName>Received_Faxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>efaxapp__Sent_To__c</fullName>
        <label>Sent To</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>efaxapp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                    <default>true</default>
                    <label>Received</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Resent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>efaxapp__Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>efaxapp__Total_Pages__c</fullName>
        <label>Total Pages</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>efaxapp__View_Fax__c</fullName>
        <formula>HYPERLINK(IF(OR(ISPICKVAL($Profile.UserType,&quot;PowerCustomerSuccess&quot;),ISPICKVAL($Profile.UserType,&quot;CustomerSuccess&quot;)),&quot;/customer&quot;,&quot;&quot;)&amp;efaxapp__Fax_URL__c,&quot;View Fax&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Fax</label>
        <type>Text</type>
    </fields>
    <label>Received Fax</label>
    <listViews>
        <fullName>efaxapp__All</fullName>
        <columns>NAME</columns>
        <columns>efaxapp__Received_Date__c</columns>
        <columns>efaxapp__Fax_Number__c</columns>
        <columns>efaxapp__Contact__c</columns>
        <columns>efaxapp__Status__c</columns>
        <columns>efaxapp__Sent_Fax__c</columns>
        <columns>efaxapp__MCFID__c</columns>
        <columns>efaxapp__Caller_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>efaxapp__Not_Accepted_Faxes</fullName>
        <columns>NAME</columns>
        <columns>efaxapp__Received_Date__c</columns>
        <columns>efaxapp__Contact__c</columns>
        <columns>efaxapp__Status__c</columns>
        <columns>efaxapp__View_Fax__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>efaxapp__Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <label>Not Accepted Faxes</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Received Fax #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Received Faxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>